# hsxmpp

./: Auth.hs  COPYING  JID.hs  MUC.hs  Main.hs  OldMain.hs  README  Stanzas.hs  TCPConnection.hs  Translate.hs  Werewolf.hs  XMLParse.hs  XMPP.cabal  XMPP.hs  XMPPConnection.hs  XMPPMonad.hs  report.txt  werewolf.txt.en  werewolf.txt.eo  werewolf.txt.sv
