Name:		XMPP
Version:	0.0.1
License:	BSD3
License-file:	COPYING
Author:		Magnus Henoch
Homepage:	http://www.dtek.chalmers.se/~henoch/text/hsxmpp.html
Synopsis:	XMPP library
Description:	XMPP is a protocol for streaming XML, whose most widespread
		use is instant messaging.  This library provides a monad
		for semi-asynchronous XMPP communication.
Exposed-Modules:    XMPP, MUC
Other-modules:	Auth, JID, Stanzas, TCPConnection, XMLParse, XMPPConnection, XMPPMonad
Build-depends:	base, haskell98, parsec, mtl, network
Tested-with:	GHC
Extra-source-files:     report.txt werewolf.txt.en werewolf.txt.eo werewolf.txt.sv

Executable:	werewolf
Main-Is:	Werewolf.hs
Other-modules:	Translate
